--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: go
 go:
   - 1.7
 
-install:
+before_script:
+  - mkdir $GOPATH/bin $GOPATH/src
   - curl https://glide.sh/get | sh
+
+install:
   - glide install
