empezando un proyecto, va ser hosteado por heroku

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: go
 go:
   - 1.7
 
-before_script:
+before_install:
   - mkdir $GOPATH/bin $GOPATH/src
   - curl https://glide.sh/get | sh
 
